--- a/style.css
+++ b/style.css
@@ -1421,14 +1421,28 @@ body{
 /*=============================
 	Start Testimonials CSS
 ===============================*/
-.testimonials{
-	background-image:url('img/testi-bg.jpg');
-	background-size:cover;
-	background-position:center;
-	background-repeat:no-repeat;
-	position:relative;
-}
-.testimonials .section-title h2{
+.testimonials {
+	background-image: url('img/testi-bg.jpg');
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: relative;
+	z-index: 1;
+	color: white;
+  }
+  
+  .testimonials::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(3, 3, 148, 0.5); /* Adjust the blue overlay opacity here */
+	z-index: -1;
+  }
+  
+.testimonials .section-title h2, .testimonials p{
 	color:#fff;
 }
 .testimonials .single-testimonial {
